--- a/style.css
+++ b/style.css
@@ -1,163 +1,64 @@
 body {
     margin: 0;
-    background-color: #3f3f3f;
     width: 100%;
 }
 
 header {
-    position: fixed;
+    position: sticky;
     width: 100%;
     z-index: 1;
-    background-color: #80011f;
+    background-color: #cccccc;
 }
 
 header img {
-    float: left;
+	display: block;
+    margin-left: auto;
+    margin-right: auto;
+
     padding: 10px 0;
     height: 100px;
 }
 
-.logos::after {
-    content: "";
-    clear: both;
-    display: table;
-}
-
-header a img:hover {
-    padding: 0;
-    height: 120px;
-}
-
 nav {
-    background-color: #1C1C1C;
+	background-color: #1C1C1C;
     color: #E5E5E5;
-    border-top: 0.5em #66011A solid;
-
-    margin-left: auto;
-    margin-right: auto;
-    padding: 0;
-
+	
     font-size: 20px;
     font-family: 'Hind Siliguri', sans-serif;
     font-weight: 300;
+	
+	text-align: center;
+}
 
-    overflow: hidden;
+nav div {
+	width: 33vw;
+	display: inline-block;
+	margin: 0 auto;
+    padding: 0;
 }
 
 nav a {
-    float: left;
+	background-color: #1C1C1C;
     text-align: center;
-
     color: #E5E5E5;
     text-decoration: none;
     padding: 0rem 2rem;
+	width: 33%;
 }
 
-.secondary-nav {
-    float: left;
-    overflow: hidden;
-}
-
-.secondary-nav .secondary-nav-button {
-    border: none;
-    outline: none;
-    color: white;
-    background-color: inherit;
-    padding: 0rem 2rem;
-
-    font-size: inherit;
-    font-weight: inherit;
-    font-family: inherit;
-    margin: 0;
-}
-
-nav a:hover, .secondary-nav:hover .secondary-nav-button {
+nav a:hover {
     background-color: #E5E5E5;
     color: #3f3f3f;
     font-weight: 600;
     cursor: pointer;
 }
 
-.secondary-nav-content {
-    display: none;
-    position: absolute;
-    left: 0;
-    background-color: #E5E5E5;
-    width: 100%;
-    z-index: 1;
-}
-
-.secondary-nav-content a {
-    float: left;
-    color: #3f3f3f;
-    text-decoration: none;
-}
-
-.secondary-nav:hover .secondary-nav-content {
-    display: block;
-}
-
-div.secondary-nav-content a:hover {
-    color: #E5E5E5;
-    background-color: #80011e;
-}
-
-section {
-    height: 50vw;
-}
-
 section div {
-    height: 33%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-    padding: 0rem 1rem;
-}
-
-.projects::after {
-    content: "";
-    clear: both;
-    display: table;
-}
-
-div.top img, div.center img, div.bottom img {
-    
-}
-
-div.top *, div.center *, div.bottom * {
-    padding: 0 .25rem;
-}
-
-div.top h1, div.center h1, div.bottom h1 {
-    text-align: center;
-    width: 25%;
-    margin: 0;
-    font-size: 2.5vw;
-    font-family: 'Hind Siliguri', sans-serif;
-    color: #E5E5E5;
-    font-weight: 600;
-}
-
-div.top p, div.center p, div.bottom p {
-    text-align: left;
-    margin: 0;
-    color: #E5E5E5;
-    width: 75%;
-    font-size: 1vw;
-    line-height: 1.33333vw;
-    font-family: 'Hind Siliguri', sans-serif;
-    font-weight: 300;
-}
-
-div.projects img {
-	float: left;
-	padding: 0 0;
-	border: 0.25em #3f3f3f solid;
-	width: 20vw;
-}
-
-.info {
-    margin: 0 auto;
-    width: 100%;
+	width: 100%;
+	height: 100vh;
+	position: absolute;
+	background-color: #fcfcfc;
+	background-image: url("Assets/Hex Overlay.png");
+	background-size: 50vh;
+	background-repeat: repeat;
 }
