--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 body {
     margin: 0;
     width: 100%;
+	background-color: #cccccc;
 }
 
 header {
-    position: sticky;
+    position: fixed;
     width: 100%;
     z-index: 1;
     background-color: #cccccc;
@@ -53,12 +54,85 @@ nav a:hover {
     cursor: pointer;
 }
 
-section div {
+.nav-offset {
+	height: 15vh;
+}
+
+section div.background {
 	width: 100%;
-	height: 100vh;
-	position: absolute;
+	height: 65vh;
+	position: static;
 	background-color: #fcfcfc;
 	background-image: url("Assets/Hex Overlay.png");
-	background-size: 50vh;
+	background-size: 40vh;
 	background-repeat: repeat;
+}
+
+.name {
+	right: 0;
+}
+
+.name:hover {
+	right: 10px;
+}
+
+div.paragraph {
+	width: 75%;
+	margin-left: auto;
+	margin-right: auto;
+	
+	font-size: 18px;
+    font-family: 'Hind Siliguri', sans-serif;
+    font-weight: 300;
+}
+
+footer {
+	text-align: center;
+}
+
+ul.socials {
+	width: 50%;
+	margin-left: auto;
+	margin-right: auto;
+	display: inline-block;
+}
+
+.fab, .fas {
+	margin: 0 1vh;
+	padding: 15px;
+	font-size: 30px;
+	text-align: center;
+	font-family: 'Hind Siliguri', sans-serif;
+	text-decoration: none;
+	border-radius: 50%;
+}
+
+.fa-at {
+  background: #3F3F3F;
+  color: #AAAAAA;
+}
+
+.fa-twitter {
+  background: #3F3F3F;
+  color: #55ACEE;
+}
+
+.fa-itch-io {
+  background: #3F3F3F;
+  color: #FA5C5C;
+}
+
+.fa-at:hover {
+  color: #3F3F3F;
+  background: #AAAAAA;
+}
+
+.fa-twitter:hover {
+  color: #3F3F3F;
+  background: #55ACEE;
+}
+
+.fa-itch-io:hover {
+  color: #3F3F3F;
+  background: #FA5C5C;
 }
