--- a/style.css
+++ b/style.css
@@ -1,50 +1,70 @@
 body {
     margin: 0;
     width: 100%;
-	background-color: #cccccc;
+	background-color: #eeeeee;
+	background-image: url("Assets/Hex Overlay.png");
+	background-repeat: repeat;
+	background-size: 40vmax;
 }
 
 header {
+	height: 15vh;
     position: fixed;
     width: 100%;
     z-index: 1;
     background-color: #cccccc;
+	background-image: url("Assets/Hex Overlay.png");
+	background-repeat: repeat;
+	background-size: 40vmax;
 }
 
 header img {
+	transition: 0.2s cubic-bezier(1, -1, 0, 2);
+
 	display: block;
     margin-left: auto;
     margin-right: auto;
 
-    padding: 10px 0;
-    height: 100px;
+    padding: 1vh 0;
+    height: 10vh;
+}
+
+header img:hover {
+	height: 10.5vh;
 }
 
 nav {
+	position: absolute;
+	bottom: -1em;
+	width: 100%;
+	height: auto;
+	
 	background-color: #1C1C1C;
     color: #E5E5E5;
 	
-    font-size: 20px;
-    font-family: 'Hind Siliguri', sans-serif;
+    font-size: 1em;
+    font-family: 'Dubai', 'Hind Siliguri', sans-serif;
     font-weight: 300;
 	
 	text-align: center;
 }
 
 nav div {
-	width: 33vw;
+	height: inherit;
+	
 	display: inline-block;
 	margin: 0 auto;
     padding: 0;
 }
 
 nav a {
+	height: inherit;
 	background-color: #1C1C1C;
     text-align: center;
     color: #E5E5E5;
     text-decoration: none;
-    padding: 0rem 2rem;
-	width: 33%;
+    padding: 0 1vmax;
+	width: 10vmax;
 }
 
 nav a:hover {
@@ -60,30 +80,114 @@ nav a:hover {
 
 section div.background {
 	width: 100%;
-	height: 65vh;
-	position: static;
+	padding: 0;
+	margin: 0;
+	overflow: auto;
+	white-space: nowrap;
+	
+	position: relative;
 	background-color: #fcfcfc;
 	background-image: url("Assets/Hex Overlay.png");
-	background-size: 40vh;
 	background-repeat: repeat;
+	border-bottom: 1vh #1C1C1C solid;
+}
+
+#hexProfile {
+	height: inherit;
 }
 
 .name {
-	right: 0;
+	transition: 0.2s cubic-bezier(1, -1, 0, 2);
+	position: relative;
+	top: 2vw;
+	right: 2vw;
+	height: 35.5vh;
+	z-index: 1;
+	background-image: url("Assets/Nemo Banner Condensed.png");
+	background-size: 65vh;
+	background-repeat: no-repeat;
+	width: 65vh;
 }
 
 .name:hover {
-	right: 10px;
+	top: 2.5vw;
 }
 
 div.paragraph {
 	width: 75%;
+	height: 12.5vh;
 	margin-left: auto;
 	margin-right: auto;
 	
-	font-size: 18px;
-    font-family: 'Hind Siliguri', sans-serif;
+	color: #E5E5E5;
+	font-size: 1.8vh;
+    font-family: 'Dubai', 'Hind Siliguri', sans-serif;
     font-weight: 300;
+}
+
+.thumb {
+	display:inline-block;
+	background-repeat: no-repeat;
+}
+
+.thumb:hover {
+    cursor: pointer;
+}
+
+.big-thumb {
+	position: absolute;
+	top: 9.1vmin;
+	left: 0vmin;
+}
+
+.small-thumb {
+	position: absolute;
+	top: 26.1vmin;
+	left: 53.333333vmin;
+}
+
+.big-thumb .thumb {
+	height: 30.569708vmin;
+	width: 60vmin;
+	background-size: 60vmin;
+}
+
+.small-thumb .thumb {
+	height: 13.635479vmin;
+	width: 13.5vmin;
+	background-size: 13.5vmin;
+}
+
+.dd-thumb {
+	background-image: url("Assets/Hex Game Thumbnails/HexThumb DD.png");
+}
+
+.dd-thumb:hover {
+	background-image: url("Assets/Hex Game Thumbnails/HexThumb DD-Highlight.png");
+}
+
+.cw-thumb {
+	background-image: url("Assets/Hex Game Thumbnails/HexThumb CW.png");
+}
+
+.cw-thumb:hover {
+	background-image: url("Assets/Hex Game Thumbnails/HexThumb CW-Highlight.png");
+}
+
+.writing-thumb {
+	background-image: url("Assets/Hex Game Thumbnails/HexThumb Writing.png");
+}
+
+.writing-thumb:hover {
+	background-image: url("Assets/Hex Game Thumbnails/HexThumb Writing-Highlight.png");
+}
+
+.github-thumb {
+	background-image: url("Assets/Hex Game Thumbnails/HexThumb GitHub.png");
+}
+
+.github-thumb:hover {
+	background-image: url("Assets/Hex Game Thumbnails/HexThumb GitHub-Highlight.png");
 }
 
 footer {
@@ -98,13 +202,13 @@ ul.socials {
 }
 
 .fab, .fas {
-	margin: 0 1vh;
-	padding: 15px;
-	font-size: 30px;
+	margin: 0;
+	padding: 0.75vmax;
+	font-size: 1.5vmax;
 	text-align: center;
 	font-family: 'Hind Siliguri', sans-serif;
 	text-decoration: none;
-	border-radius: 50%;
+	clip-path: polygon(50% 100%, 6.75% 75%, 6.75% 25%, 50% 0%, 93.75% 25%, 93.75% 75%);
 }
 
 .fa-at {
