--- a/style.css
+++ b/style.css
@@ -1,8 +1,7 @@
 body {
     margin: 0;
     width: 100%;
-	background-color: #eeeeee;
-	background-image: url("Assets/Hex Overlay.png");
+	background-color: #cccccc;
 	background-repeat: repeat;
 	background-size: 40vmax;
 }
@@ -13,7 +12,6 @@ header {
     width: 100%;
     z-index: 1;
     background-color: #cccccc;
-	background-image: url("Assets/Hex Overlay.png");
 	background-repeat: repeat;
 	background-size: 40vmax;
 }
