--- a/style-mobile.css
+++ b/style-mobile.css
@@ -96,12 +96,96 @@ section div.background {
 	border-bottom: 1vh #1C1C1C solid;
 }
 
+.blog-container {
+	display: inline-block;
+	background-color: rgba(245, 245, 245, 0.8);
+    font-family: 'Dubai', 'Hind Siliguri', sans-serif;
+    font-weight: 300;
+}
+
+.blog-container.blog-selection {
+	margin: 5% 2.5%;
+	padding: 0% 2.5%;
+	max-width: 90%;
+	width: 90%;
+}
+
+.blog-container.blog-selection ul {
+	padding: 0;
+	text-overflow: ellipsis-word;
+	white-space: nowrap;
+    overflow: hidden;
+}
+
+.blog-container.blog-selection ul p {
+	margin: 0;
+}
+
+.blog-container.blog-selection a {
+	font-size: 3vh;
+	color: #80011E;
+	font-weight: 600;
+	text-decoration: none;
+}
+
+.blog-container.blog-content {
+	margin: 2em 10%;
+	padding: 1em 2.5%;
+	width: 75%;
+	word-break: break-word;
+	white-space: normal;
+}
+
+.blog-container.blog-content h1, h5
+{
+	margin: 0;
+	font-family: 'Dubai', 'Hind Siliguri', sans-serif;   
+}
+
+.blog-container.blog-content h1
+{
+	font-weight: 600;
+	font-size: 3em;
+}
+
+.blog-container.blog-content h5
+{
+	margin-top: -1em;
+	margin-bottom: 2em;
+	font-weight: 400;
+	font-size: 1em;
+}
+
+.blog-container.blog-content a {
+	color: #80011E;
+	font-weight: 600;
+	text-decoration: none;
+}
+
 #hexProfile {
 	position: absolute;
 	height: inherit;
 	width: inherit;
 	left: 50%;
 	margin-left: -300px;
+}
+
+.blog-name {
+	transition: 0.2s cubic-bezier(1, -1, 0, 2);
+	position: fixed;
+	top: 20vh;
+	right: 5vh;
+	height: 35.5vh;
+	z-index: 1;
+	background-image: url("Assets/Nemo Banner Condensed.png");
+	background-size: 65vh;
+	background-repeat: no-repeat;
+	width: 65vh;
+	margin-right: 0vh;
+}
+
+.blog-name:hover {
+	top: 22.5vh;
 }
 
 .name {
@@ -268,6 +352,10 @@ ul.socials {
 	visibility: hidden;
 }
 
+.half-screen-hide {
+	visibility: hidden;
+}
+
 /* Desktop */
 @media (min-width: 800px) 
 {		
@@ -275,7 +363,7 @@ ul.socials {
 		position: fixed;
 		background-size: 45.77455vh;
 		
-		top: 20vh;
+		top: 5vh;
 		right: 5vh;
 		height: 25vh;
 		width: 45.77455vh;	
@@ -283,7 +371,7 @@ ul.socials {
 	}
 
 	.name:hover {
-		top: 22.5vh;
+		top: 10vh;
 	}
 	
 	.background.projects {
@@ -368,14 +456,24 @@ ul.socials {
 	.name {
 		background-size: 65vh;
 
-		top: 20vh;
+		top: 5vh;
 		right: 5vh;
 		height: 35.5vh;
 		width: 65vh;
 	}
 	
+	.blog-container.blog-selection {
+		margin: 2em 5%;
+		max-width: 40%;
+		width: 40%;
+	}
+	
 	.fab, .fas {
 		padding: 1em;
 		font-size: 1.5em;
+	}
+	
+	.half-screen-hide {
+		visibility: visible;
 	}
 }
