--- a/style.css
+++ b/style.css
@@ -90,6 +90,10 @@ section div.background {
 	border-bottom: 1vh #1C1C1C solid;
 }
 
+div.blog-container {
+	max-width: 100%
+}
+
 #hexProfile {
 	height: inherit;
 }
