--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ section div.background {
 	border-bottom: 1vh #1C1C1C solid;
 }
 
-div.blog-container {
+div.blog-container img {
 	max-width: 100%
 }
 
