--- a/style-mobile.css
+++ b/style-mobile.css
@@ -96,7 +96,7 @@ section div.background {
 	border-bottom: 1vh #1C1C1C solid;
 }
 
-div.blog-container img {
+div.blog-container p img {
 	max-width: 100%
 }
 
