--- a/style-new.css
+++ b/style-new.css
@@ -410,6 +410,10 @@ section#blog-posts {
 	padding: 2vh 2vw;
 }
 
+.blog-post.unpublished {
+	visibility: hidden;
+}
+
 .blog-indicator {
 	transition: 0.2s ease-in-out;
 	
@@ -499,14 +503,14 @@ div.blog-content {
 }
 
 .blog-info-text {
-	padding: 5vh 0;
+	padding: 5vh 0 0 0;
 
 	text-align: center;
 	position: absolute;
 	left: 0;
 	top: 0;
 	width: 100%;
-	height: inherit;
+	height: auto;
 	color: #bdbdbd;
 }
 
